--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "history": "^4.9.0",
+    "http-proxy-middleware": "^0.20.0",
     "js-cookie": "^2.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -21,6 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
